# quality_assessment_library

./: .gitignore  README.md  README_models.md  __init__.py  car_quality_metrics.ipynb  classifier_training.py  config_small.json  data_postprocessing.ipynb  data_preprocessing.ipynb  florence_metrics.ipynb  manifest.in  meshfleet_metrics.ipynb  metrics.ipynb  metrics.py  metrics_3d_example.ipynb  metrics_3d_results.json  metrics_old.ipynb  prompt_metrics.ipynb  pyproject.toml  requirements.in  requirements.txt  requirements_min.txt  requirements_trellis.txt  run_meshfleet_eval.py  setup.py  test_metrics.ipynb
Meshfleet_Eval/Ground_Truth/0ae696bd837219e784b8b7979807184decd5abdb813f0fd7bbfbf6a82bdcc798 copy/: transforms.json
car_quality_estimator/: __init__.py  car_quality_metric.py  divergences_and_distances.py  embedding_models.py  individual_image_classifier.py  uncertrainty_estimation.py  utils.py
example_data/: config_small.json  meshfleet_test.csv
example_data/0ae696bd837219e784b8b7979807184decd5abdb813f0fd7bbfbf6a82bdcc798/: 002.txt
example_data/2c21b97ff3dc4fc3b1ef9e4bb0164318/: 000.npy  000_aed.json  001.npy  001_aed.json  002.npy  002_aed.json  003.npy  003_aed.json  004.npy  004_aed.json  005.npy  005_aed.json  006.npy  006_aed.json  007.npy  007_aed.json  008.npy  008_aed.json  009.npy  009_aed.json  010.npy  010_aed.json  011.npy  011_aed.json  012.npy  012_aed.json  013.npy  013_aed.json  014.npy  014_aed.json  015.npy  015_aed.json  016.npy  016_aed.json  017.npy  017_aed.json  018.npy  018_aed.json  019.npy  019_aed.json  (+3 more)
example_data/Meshfleet_Eval/: metrics_results_config_test.json
example_data/Meshfleet_Eval/Ground_Truth/00e4b7ca7abbe82c02dd2d5e1023c4196a7b4cedc6b38b70b188dcc5515551da/: transforms.json
example_data/Meshfleet_Eval/Ground_Truth/4f0e8fe23f6bdc119ee773c3e7f796e90ee41fed1066be8a58d215599849c74c/: transforms.json
example_data/Meshfleet_Eval/Results_000/: front_view_alignment.csv
example_data/Meshfleet_Eval/Results_000/4f0e8fe23f6bdc119ee773c3e7f796e90ee41fed1066be8a58d215599849c74c/: 008.txt
meshfleet_benchmark/: __init__.py  benchmark_config.yaml  config.py  config_meshfleet.json  constants.py  meshfleet_test.csv  pipeline.py  progress.py  reporting.py  utils.py
metrics/: __init__.py  helpers.py  metrics.py  metrics_eval.py  metrics_eval_old.py  viewpoint_florence.py
metrics/metrics/: helpers.py  metrics.py
metrics_3d/: __init__.py  helpers.py  metrics_3d.py  metrics_eval.py
preprocessing/: __init__.py  image_processing.py  image_scaling.py
scripts/: __init__.py  __main__.py  download_meshfleet_benchmark.py  download_models.py  install.py  setup_meshfleet_eval.sh
