[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quality_assessment_library"
version = "0.1.0"
description = "A library for assessing the quality of 3D models, with a focus on 3D car models"
readme = "README.md"
authors = [
    {name = "Damian Boborzi", email = "damian.boborzi@uni-a.de"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved ::Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.4",
    "torchvision>=0.19",
    "numpy>=1.26",
    "scipy>=1.14",
    "scikit-learn>=1.6",
    "Pillow>=10.4",
    "imageio>=2.34",
    "transformers>=4.45",
    "huggingface_hub>=0.30",
    "safetensors>=0.4", 
    "clip @ git+https://github.com/openai/CLIP.git@a1d071733d7111c9c014f024669f959182114e33",
    "sentencepiece>=0.2.0",
    "open_clip_torch>=2.24",
    "onnxruntime==1.21.0",
    "pytorch_lightning>=2.2", 
    "torchmetrics>=1.7",
    "torchdata>=0.8", 
    "pytorch-fid>=0.3", 
    "protobuf>=4.25",
    "torch-fidelity>=0.3",
    "opencv-contrib-python>=4.10", 
    "rembg>=2.0",
    "tqdm>=4.66",
    "requests>=2.32", 
    "packaging>=24.1", 
    "sdata>=0.23",
    "image-reward>=1.5",
    # Mesh Metrics Dependencies:
    "trimesh>=3.20",
    "vtk>=9.2.6",
    "MeshMetrics @ git+https://github.com/gasperpodobnik/MeshMetrics.git@main",
]

[project.urls]
"Homepage" = "https://github.com/FeMa42/quality_assessment_library"
"Bug Tracker" = "https://github.com/FeMa42/quality_assessment_library/issues"

[project.scripts]
quality-assessment-download-models = "scripts.download_models:download_models"

[tool.setuptools]
packages = ["car_quality_estimator", "scripts", "metrics", "preprocessing"]
include-package-data = true
